--- a/CYHCommonLib/Base.lproj/Main.storyboard
+++ b/CYHCommonLib/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="OSY-gH-at5">
-                                <rect key="frame" x="0.0" y="89" width="414" height="90"/>
+                                <rect key="frame" x="0.0" y="89" width="414" height="135"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t90-8k-MRx">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
@@ -47,6 +48,16 @@
                                         <connections>
                                             <action selector="clickGTableView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rUo-P7-apV"/>
                                             <action selector="clickxIb:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wlh-NT-y1q"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kY5-xy-Dgp">
+                                        <rect key="frame" x="0.0" y="90" width="414" height="45"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="45" id="awg-q4-9Lj"/>
+                                        </constraints>
+                                        <state key="normal" title="封装UITableView精简使用（升级版）"/>
+                                        <connections>
+                                            <action selector="clickYHTableView:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sTw-cC-vB9"/>
                                         </connections>
                                     </button>
                                 </subviews>
